# DripsServer

./: Cargo.toml  Dockerfile  README.md  README_zh-CN.md  a.json  b.json
data/: sqlite.db
data/kv/: db  snap.00000000000000D4
locales/: en.yml
pack/: .env  table_sqlite.sql
pack/data/: sqlite.db
pack/locales/: zh-CN.yml
src/: auth.rs  comments.rs  config.rs  lib.rs  main.rs  ugc.rs  verify.rs
src/bean/: comments.rs  likes.rs  mod.rs  ugc.rs  ugc_history.rs
src/decoder/: mod.rs  pager.rs  user_data.rs
src/response/: response.rs
