[package]
name = "drips_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web 框架
actix-web = "4.2.1"
futures-util = "0.3"
env_logger = "0.9.1"
# 懒加载
lazy_static = "1.4.0"
# 序列化
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
# 时间
chrono = "0.4.22"

# SQL ORM 数据库框架
#async runtime lib
tokio = { version = "1", features = ["full"] }
# logging(option)
log = "0.4"
fast_log = "1.5"
# serde/rbs (required)
rbs = { version = "0.1"}
rbatis = { version = "4.0"}
# choose one rbdc drivier
rbdc-sqlite = { version = "0.1" }
#rbdc-mysql={version="0.1"}
#rbdc-pg={version="0.1"}
#rbdc-mssql={version="0.1"}

# KV 数据库
sled = "0.34.7"
# 环境变量
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

# 本地化
rust-i18n = "1.0.1"
once_cell = "1.10.0"

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "zh-CN"]

# The default locale, default: "en".
default-locale = "en"

# Path for your translations YAML file, default: "locales".
load-path = "locales"